--- a/app/assets/stylesheets/core.css
+++ b/app/assets/stylesheets/core.css
@@ -1,10 +1,13 @@
 @media print {   
   @page {
-    size: A5;
-    orphans:0; widows:0;
-    margin:0 .5cm;
+    size: A5;    
+    text-align:center;
     padding:0;    
-    position:absolute;
+    position:relative;
+    top:0;
+    orphans:0; widows:0;
+    left:0;
+    right:0;    
   }
   
   html, body {
@@ -13,45 +16,63 @@
     color:#000;
     margin: 0;
     padding: 0;
+    top:0;
   }
+  .margin-top {margin-top:-2%}
+  .avoid-this, .site-main, #footer, .alert.alert-success {display:none}
   
-  .avoid-this, .site-main, #footer {display:none}
-  
+  /*
   .letter-show { 
-    font-family: 'open_sansregular';
-    width:15cm;  
-    height:20cm;
-    position:absolute; 
+    font-family: 'open_sansregular';      
     right:0; left:0;
     direction:rtl;
-    top:0; margin:0;padding-top:0px;
-    z-index:10;    
+    top:0; margin:0;padding-top:0;
+    position:fixed;
+    z-index:10;   
+    
     }
-  .letter-show .letter-info{ position:absolute; top:0; width:100%; padding:0}
-  .letter-left-info  {width:30%; float:left; text-align:right; font-size:14px;  margin-right:5%; }
-  .letter-besmei {width:22%;  float:left; font-size:12px; padding-top:10%; margin-right:3%; text-align:right; }
-  .letter-right-info  {width:35%; float:left; text-align:right;  }
+    */
+  .letter-show {top:0; left:0; right:0;}  
+  .letter-show .letter-info{ position:relative;top:0; width:100%; padding:0}
+  .letter-left-info  {width:38%; float:left; text-align:right; font-size:10pt;   }
+  .letter-besmei {width:22%;  float:left; font-size:10pt; padding-top:10%;  text-align:center; }
+  .letter-right-info  {width:35%; float:left; text-align:right;  font-size:11pt;}
 
-  .letter-show .letter-right-info .letter-company-name{font-size:15px; font-weight:bold}
-  .letter-show .letter-right-info p{font-size:14px; }
-  
+  .letter-show .letter-right-info .letter-company-name{font-size:12pt; font-weight:bold}
+  .letter-show .letter-right-info p{font-size:10pt; }
+  .letter-show .letter-holder {position:absolute; top:15%; left:0; right:0;height:70%;}
+  .letter-show .letter-holder .letter-text  { font-size:10pt;}
+  .letter-show .letter-holder .letter-text p {
+    width:90%;
+    font-size:10pt;
+    margin-right:5%;    
+    margin-left:5%;
+    line-height:19pt;
+    }
+  .letter-show .letter-holder .letter-signture  { font-size:8pt;
+    width:100%; 
+    margin-top:10%;
+  }
+  /*
   .letter-show .letter-holder {         
-    width:100%;
-    top:10%;        
-    border-top: 2px solid #4D4D4D;
-    border-left: 2px solid #4D4D4D;
-    border-right: 2px solid #4D4D4D;    
+    width:13cm;
+    height:20cm;
+    top:15%;            
+    border-top: 2pt solid #4D4D4D;
+    border-left: 2pt solid #4D4D4D;
+    border-right: 2pt solid #4D4D4D;    
     border-radius:10%;
-    position:absolute;
+    position:fixed;
+    
   }
   .letter-show .letter-holder .letter-inner-title {    
   font-family: 'IranNastaligh';
-    font-size:20px; color:#000; 
+    font-size:20pt; color:#000; 
     margin-right:5%;    
     height:5%;
     
   }
-  .letter-show .letter-holder .letter-text {font-size:12px; color:#000;
+  .letter-show .letter-holder .letter-text {font-size:12pt; color:#000;
     min-height:30%;    
     text-align:justify; direction:rtl; 
     width:100%;       
@@ -59,27 +80,30 @@
   .letter-show .letter-holder .letter-text p {width:90%;
     margin-right:5%;    
     margin-left:5%;
-    line-height:19px;
+    line-height:19pt;
     }
   .letter-show .letter-holder .letter-text p span{font-family: 'open_sansregular';}
-  .letter-show .letter-holder .letter-signture  { font-size:13px;
+  .letter-show .letter-holder .letter-signture  { font-size:13pt;
     width:100%; 
     margin-top:10%;
   }
+   
   .show-address {width:70%; height:6%; 
     bottom:-8%;  
     right:10%;      
     left:10%;      
     background:#E5E5E5;
     text-align:center;
-    position:absolute;
+    position:fixed;
     z-index:50;
-    font-size:11px;
+    font-size:11pt;
     font-family: 'open_sansregular';
   }
   .tank-box{width:50%; text-align:center; float:left;}
   .attachment{
     width:100%; text-align:right; margin-right:5%; }
   .clear {clear:both}
-  
+  */
+  .show-address {font-size:8pt;width:90%; height:15%; }
 }
+
